gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/imports/stdtraits10727.d
version https://git-lfs.github.com/spec/v1
oid sha256:585c4ad23be4fe5eb136fcb74cde3cd55e7ac86be3843c1cc1e07df7d2062c53
size 1432
